# crehana

./: .gitignore  DECISION_LOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt  test_all_apis.sh
src/: config.py  main.py
src/application/: auth_service.py  dto.py  services.py
src/domain/: entities.py  exceptions.py  repositories.py
src/infrastructure/: database.py  repositories.py
src/presentation/: dependencies.py  exception_handlers.py
src/presentation/routers/: auth.py  task_lists.py  tasks.py
tests/: conftest.py
tests/integration/: test_api_integration.py  test_auth_integration.py  test_notification_integration.py  test_simple_integration.py  test_task_integration.py
tests/unit/: test_api_endpoints.py  test_application.py  test_application_services.py  test_authentication_service.py  test_business_logic.py  test_config.py  test_configuration_and_settings.py  test_core_functionality.py  test_dependency_injection.py  test_domain.py  test_endpoint_validation.py  test_entities_and_dtos.py  test_error_handling.py  test_infrastructure.py  test_notification_service.py  test_presentation.py  test_repository_layer.py  test_repository_methods.py  test_router_basics.py  test_router_configuration.py  test_router_endpoints.py  test_service_layer.py  test_task_endpoints.py  test_task_list_endpoints.py  test_utilities_and_helpers.py  test_validation_and_security.py
